--- a/templates/browser.html
+++ b/templates/browser.html
@@ -74,7 +74,12 @@
                   <td class="age">${dateinfo(change.date)}</td>
                   <td class="change">
                     <span class="author">$change.author:</span>
-                    <span class="change">$change.message</span>
+                    <span class="change" py:choose="">
+                      <py:when test="wiki_format_messages">
+                        ${wiki_to_oneliner(change.message)}
+                      </py:when>
+                      <py:otherwise>${shorten_line(change.message)}</py:otherwise>
+                    </span>
                   </td>
                 </tr>
               </py:with>
@@ -87,11 +92,16 @@
         <tr py:if="file">
           <th scope="col">
             Revision <a href="${href.changeset(rev)}">$rev</a>, ${sizeinfo(file.size)}
-            (checked in by $file.author, ${dateinfo(file.date)} ago)
+            (checked in by $file.changeset.author, ${dateinfo(file.changeset.date)} ago)
           </th>
         </tr>
         <tr py:if="file">
-          <td class="message searchable">$file.message</td>
+          <td class="message searchable" py:choose="">
+            <py:when test="wiki_format_messages">
+              ${wiki_to_html(file.changeset.message, escape_newlines=True)}
+            </py:when>
+            <py:otherwise>${file.changeset.message}</py:otherwise>
+          </td>
         </tr>
         <tr py:if="props">
           <td colspan="2">
