--- a/templates/admin_plugins.html
+++ b/templates/admin_plugins.html
@@ -65,7 +65,7 @@
             <dt>Home page:</dt>
             <dd>
               <a onclick="window.open(this.href); return false"
-                 href="$plugin.info.home_page">${plugin.info.home_page}</a>
+                 href="${plugin.info.home_page}">${plugin.info.home_page}</a>
             </dd>
           </py:if>
           <py:if test="plugin.info.license">
